changing dependency language to "relationship"
